traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:40: error: Unmatched closing brace '}' ignored here
}
^