traversal.snake.Snake.scala.code
override def run() {
  
  def fonctionTest() {
    
    if (estFaceMur == true) && (getDirection() == Direction.EST) {
    	gauche();
      if (estFaceMur == true) && (getDirection() == Direction.NORD) {
        return true
      }
      
    }
    
    if (estFaceMur == true) && (getDirection() == Direction.OUEST) {
    	droite();
      if (estFaceMur == true) && (getDirection() == Direction.NORD) {
        return true
      }
    }
    
    return false
    
  }
  
  while (!fonctionTest()) {
    
    avance();
    
    
    
  }
    
    
    
    
  }
  
  
}